--- a/nhl.html
+++ b/nhl.html
@@ -119,6 +119,59 @@
             <td><a href="https://roxiestreams.live/nhl-streams-5">Minnesota Wild vs Seattle Kraken</a></td>
             <td>December 08, 2025 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-09 19:00:00" data-start="2025-12-08 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Tuesday, December 09, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Tampa Bay Lightning vs Montreal Canadiens</a></td>
+            <td>December 09, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-10 16:00:00" data-start="2025-12-09 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">New Jersey Devils vs Ottawa Senators</a></td>
+            <td>December 09, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-10 16:00:00" data-start="2025-12-09 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Vegas Golden Knights vs New York Islanders</a></td>
+            <td>December 09, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-10 16:00:00" data-start="2025-12-09 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">San Jose Sharks vs Philadelphia Flyers</a></td>
+            <td>December 09, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-10 16:00:00" data-start="2025-12-09 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Anaheim Ducks vs Pittsburgh Penguins</a></td>
+            <td>December 09, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-10 16:00:00" data-start="2025-12-09 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Columbus Blue Jackets vs Carolina Hurricanes</a></td>
+            <td>December 09, 2025 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-10 16:30:00" data-start="2025-12-09 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Boston Bruins vs St. Louis Blues</a></td>
+            <td>December 09, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-10 17:00:00" data-start="2025-12-09 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Dallas Stars vs Winnipeg Jets</a></td>
+            <td>December 09, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-10 17:00:00" data-start="2025-12-09 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Buffalo Sabres vs Edmonton Oilers</a></td>
+            <td>December 09, 2025 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-10 18:00:00" data-start="2025-12-09 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Colorado Avalanche vs Nashville Predators</a></td>
+            <td>December 09, 2025 06:30 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-10 18:30:00" data-start="2025-12-09 18:30:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
