--- a/nfl.html
+++ b/nfl.html
@@ -143,7 +143,7 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nfl-streams-1">
-         Philadelphia Eagles vs Los Angeles Rams
+         Philadelphia Eagles vs Los Angeles Chargers
         </a>
        </td>
        <td>
