--- a/fighting.html
+++ b/fighting.html
@@ -106,6 +106,10 @@
 <td>December 09, 2025 17:00 PM</td>
 <td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 09, 2025 17:00:00"></span></td>
 </tr>
+<td><a href="https://roxiestreams.live/aew">AEW</a></td>
+<td>December 10, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 10, 2025 17:00:00"></span></td>
+</tr>
 </tbody>
 </table>
 </div>
