--- a/soccer.html
+++ b/soccer.html
@@ -97,47 +97,47 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Kairat vs Olympiacos Piraeus</a>
-<td>December 08, 2025 11:45 AM</td>
+<td>December 08, 2025 07:30 AM</td>
 <td><span class="countdown-timer" data-end="December 09, 2025 10:45:00" data-start="December 08, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Bayern München vs Sporting CP</a>
-<td>December 08, 2025 11:45 AM</td>
+<td>December 08, 2025 09:45 AM</td>
 <td><span class="countdown-timer" data-end="December 09, 2025 10:45:00" data-start="December 08, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-11">UEFA Golazo Show</a>
-<td>December 08, 2025 12:00 AM</td>
+<td>December 08, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 09, 2025 11:00:00" data-start="December 08, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Atalanta vs Chelsea</a>
-<td>December 08, 2025 12:00 AM</td>
+<td>December 08, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 09, 2025 11:00:00" data-start="December 08, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Barcelona vs Eintracht Frankfurt</a>
-<td>December 08, 2025 12:00 AM</td>
+<td>December 08, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 09, 2025 11:00:00" data-start="December 08, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Inter Milan vs Liverpool</a>
-<td>December 08, 2025 12:00 AM</td>
+<td>December 08, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 09, 2025 11:00:00" data-start="December 08, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-6">Monaco vs Galatasaray</a>
-<td>December 08, 2025 12:00 AM</td>
+<td>December 08, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 09, 2025 11:00:00" data-start="December 08, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-7">PSV vs Atlético Madrid</a>
-<td>December 08, 2025 12:00 AM</td>
+<td>December 08, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 09, 2025 11:00:00" data-start="December 08, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-8">Tottenham vs Slavia Praha</a>
-<td>December 08, 2025 12:00 AM</td>
+<td>December 08, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 09, 2025 11:00:00" data-start="December 08, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-9">Union Saint-Gilloise vs Marseille</a>
-<td>December 08, 2025 12:00 AM</td>
+<td>December 08, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 09, 2025 11:00:00" data-start="December 08, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-10">Queens Park Rangers vs Birmingham City</a>
-<td>December 08, 2025 12:00 AM</td>
+<td>December 08, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 09, 2025 11:00:00" data-start="December 08, 2025 12:00:00"></span></td>
 <tr>
 </tr></td></tr></td></tr></td></tr></tbody></table></div>
