--- a/soccer.html
+++ b/soccer.html
@@ -98,11 +98,11 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Kairat vs Olympiacos Piraeus</a>
 <td>December 08, 2025 07:30 AM</td>
-<td><span class="countdown-timer" data-end="December 09, 2025 10:45:00" data-start="December 08, 2025 11:45:00"></span></td>
+<td><span class="countdown-timer" data-end="December 09, 2025 06:30:00" data-start="December 08, 2025 07:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Bayern München vs Sporting CP</a>
 <td>December 08, 2025 09:45 AM</td>
-<td><span class="countdown-timer" data-end="December 09, 2025 10:45:00" data-start="December 08, 2025 11:45:00"></span></td>
+<td><span class="countdown-timer" data-end="December 09, 2025 08:45:00" data-start="December 08, 2025 09:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-11">UEFA Golazo Show</a>
 <td>December 08, 2025 12:00 PM</td>
@@ -140,7 +140,7 @@
 <td>December 08, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 09, 2025 11:00:00" data-start="December 08, 2025 12:00:00"></span></td>
 <tr>
-</tr></td></tr></td></tr></td></tr></tbody></table></div>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
