--- a/index.html
+++ b/index.html
@@ -183,30 +183,21 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-2">Laliga</a></td>
-                    <td>December 08, 2025 11:45 AM</td>
-                    <td><span class="countdown-timer" data-start="December 07, 2025 05:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-3">Premier League</a></td>
-                    <td>December 08, 2025 12:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 08, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-2">UEFA Champions League</a></td>
+                    <td>December 09, 2025 09:45 AM</td>
+                    <td><span class="countdown-timer" data-start="December 09, 2025 09:45:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                     <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-                    <td>December 08, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 08, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td>December 09, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 09, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
-                    <td>December 08, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 08, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
+                    <td>December 09, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 09, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl-streams-3">NFL (MNF)</a></td>
-                    <td>December 08, 2025 17:15 PM</td>
-                    <td><span class="countdown-timer" data-start="December 08, 2025 17:15:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
             </tbody>
         </table>
     </div>
