--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-2">UEFA Champions League</a></td>
+                    <td><a href="https://roxiestreams.live/soccer">UEFA Champions League</a></td>
                     <td>December 09, 2025 09:45 AM</td>
                     <td><span class="countdown-timer" data-start="December 09, 2025 09:45:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
