--- a/nhl.html
+++ b/nhl.html
@@ -172,6 +172,29 @@
             <td><a href="https://roxiestreams.live/nhl-streams-10">Colorado Avalanche vs Nashville Predators</a></td>
             <td>December 09, 2025 06:30 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-10 18:30:00" data-start="2025-12-09 18:30:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Wednesday, December 10, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">New York Rangers vs Chicago Blackhawks</a></td>
+            <td>December 10, 2025 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-11 16:30:00" data-start="2025-12-10 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Detroit Red Wings vs Calgary Flames</a></td>
+            <td>December 10, 2025 05:30 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-11 17:30:00" data-start="2025-12-10 17:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Florida Panthers vs Utah Mammoth</a></td>
+            <td>December 10, 2025 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-11 18:00:00" data-start="2025-12-10 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Los Angeles Kings vs Seattle Kraken</a></td>
+            <td>December 10, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-11 19:00:00" data-start="2025-12-10 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
