--- a/soccer.html
+++ b/soccer.html
@@ -96,51 +96,55 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Kairat vs Olympiacos Piraeus</a>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Cruz Azul vs Flamengo</a>
 <td>December 09, 2025 07:30 AM</td>
 <td><span class="countdown-timer" data-end="December 10, 2025 06:30:00" data-start="December 09, 2025 07:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Bayern München vs Sporting CP</a>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Qarabağ vs Ajax</a>
 <td>December 09, 2025 09:45 AM</td>
 <td><span class="countdown-timer" data-end="December 10, 2025 08:45:00" data-start="December 09, 2025 09:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">UEFA Golazo Show</a>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Villarreal vs København</a>
 <td>December 09, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 10, 2025 11:00:00" data-start="December 09, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Atalanta vs Chelsea</a>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Atalanta vs Chelsea</a>
 <td>December 09, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 10, 2025 11:00:00" data-start="December 09, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Barcelona vs Eintracht Frankfurt</a>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Athletic Club vs PSG</a>
 <td>December 09, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 10, 2025 11:00:00" data-start="December 09, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Inter Milan vs Liverpool</a>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Bayer Leverkusen vs Newcastle</a>
 <td>December 09, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 10, 2025 11:00:00" data-start="December 09, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Monaco vs Galatasaray</a>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Benfica vs Napoli</a>
 <td>December 09, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 10, 2025 11:00:00" data-start="December 09, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">PSV vs Atlético Madrid</a>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Club Brugge vs Arsenal</a>
 <td>December 09, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 10, 2025 11:00:00" data-start="December 09, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Tottenham vs Slavia Praha</a>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Dortmund vs Bodø / Glimt</a>
 <td>December 09, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 10, 2025 11:00:00" data-start="December 09, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Union Saint-Gilloise vs Marseille</a>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Juventus vs Pafos</a>
 <td>December 09, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 10, 2025 11:00:00" data-start="December 09, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Queens Park Rangers vs Birmingham City</a>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Real Madrid vs Manchester City</a>
 <td>December 09, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 10, 2025 11:00:00" data-start="December 09, 2025 12:00:00"></span></td>
 <tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Cruzeiro vs Corinthians</a>
+<td>December 09, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 10, 2025 11:00:00" data-start="December 09, 2025 12:00:00"></span></td>
+<tr>
+</tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
