--- a/nba.html
+++ b/nba.html
@@ -170,6 +170,82 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 11, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Los Angeles Clippers vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        December 11, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 12, 2025 5:00 PM:00" data-start="December 11, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Boston Celtics vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        December 11, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 12, 2025 5:00 PM:00" data-start="December 11, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Portland Trail Blazers vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        December 11, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 12, 2025 5:00 PM:00" data-start="December 11, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Denver Nuggets vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        December 11, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 12, 2025 7:00 PM:00" data-start="December 11, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
