--- a/nfl.html
+++ b/nfl.html
@@ -143,14 +143,14 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nfl-streams-1">
-         Philadelphia Eagles vs Los Angeles Chargers
+         Atalanta Falcons vs Tamapa Bay Buccaneers
         </a>
        </td>
        <td>
-        December 08, 2025 5:15 PM
+        December 11, 2025 5:15 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 09, 2025 5:15 PM:00" data-start="December 08, 2025 5:15 PM:00">
+        <span class="countdown-timer" data-end="December 12, 2025 5:15 PM:00" data-start="December 11, 2025 5:15 PM:00">
         </span>
        </td>
       </tr>
