--- a/index.html
+++ b/index.html
@@ -183,19 +183,24 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer">UEFA Champions League</a></td>
-                    <td>December 09, 2025 09:45 AM</td>
-                    <td><span class="countdown-timer" data-start="December 09, 2025 09:45:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer">UEFA Europa League</a></td>
+                    <td>December 11, 2025 09:45 AM</td>
+                    <td><span class="countdown-timer" data-start="December 11, 2025 09:45:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/darts">World Darts Championship</a></td>
+                    <td>December 11, 2025 10:30 AM</td>
+                    <td><span class="countdown-timer" data-start="December 11, 2025 10:30:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                     <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-                    <td>December 09, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 09, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td>December 11, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 11, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
-                    <td>December 09, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 09, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl-streams-1">NFL (TNF)</a></td>
+                    <td>December 11, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 11, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
