--- a/soccer.html
+++ b/soccer.html
@@ -95,74 +95,74 @@
 </tr>
 </thead>
 <tbody>
-</td>
+
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Dinamo Zagreb vs Real Betis</a>
-<td>December 10, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 08:00:00" data-start="December 10, 2025 09:00:00"></span></td>
+<td>December 11, 2025 09:45 AM</td>
+<td><span class="countdown-timer" data-end="December 12, 2025 08:45:00" data-start="December 11, 2025 09:45:00"></span></td>
 </td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Ferencváros vs Rangers</a>
-<td>December 10, 2025 09:45 AM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 08:45:00" data-start="December 10, 2025 09:45:00"></span></td>
+<td>December 11, 2025 09:45 AM</td>
+<td><span class="countdown-timer" data-end="December 12, 2025 08:45:00" data-start="December 11, 2025 09:45:00"></span></td>
 </td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Utrecht vs Nottingham Forest</a>
-<td>December 10, 2025 09:45 AM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 08:45:00" data-start="December 10, 2025 09:45:00"></span></td>
+<td>December 11, 2025 09:45 AM</td>
+<td><span class="countdown-timer" data-end="December 12, 2025 08:45:00" data-start="December 11, 2025 09:45:00"></span></td>
 </td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Young Boys vs Lille</a>
-<td>December 10, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 11:00:00" data-start="December 10, 2025 12:00:00"></span></td>
+<td>December 11, 2025 09:45 AM</td>
+<td><span class="countdown-timer" data-end="December 12, 2025 08:45:00" data-start="December 11, 2025 09:45:00"></span></td>
 </td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-6">Aberdeen vs Strasbourg</a>
-<td>December 10, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 11:00:00" data-start="December 10, 2025 12:00:00"></span></td>
+<td>December 11, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 12, 2025 11:00:00" data-start="December 11, 2025 12:00:00"></span></td>
 </td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-7">Basel vs Aston Villa</a>
-<td>December 10, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 11:00:00" data-start="December 10, 2025 12:00:00"></span></td>
+<td>December 11, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 12, 2025 11:00:00" data-start="December 11, 2025 12:00:00"></span></td>
 </td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-8">Celtic vs Roma</a>
-<td>December 10, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 11:00:00" data-start="December 10, 2025 12:00:00"></span></td>
+<td>December 11, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 12, 2025 11:00:00" data-start="December 11, 2025 12:00:00"></span></td>
 </td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-9">Celta De Vigo vs Bologna</a>
-<td>December 10, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 11:00:00" data-start="December 10, 2025 12:00:00"></span></td>
+<td>December 11, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 12, 2025 11:00:00" data-start="December 11, 2025 12:00:00"></span></td>
 </td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-10">Shelbourne vs Crystal Palace</a>
-<td>December 10, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 11:00:00" data-start="December 10, 2025 12:00:00"></span></td>
+<td>December 11, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 12, 2025 11:00:00" data-start="December 11, 2025 12:00:00"></span></td>
 </td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-11">Porto vs Malmo FF</a>
-<td>December 10, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 11:00:00" data-start="December 10, 2025 12:00:00"></span></td>
+<td>December 11, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 12, 2025 11:00:00" data-start="December 11, 2025 12:00:00"></span></td>
 </td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-12">Lyon vs Go Ahead Eagles</a>
-<td>December 10, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 15:30:00" data-start="December 10, 2025 16:30:00"></span></td>
+<td>December 11, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 12, 2025 11:00:00" data-start="December 11, 2025 12:00:00"></span></td>
 </td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-13">Vasco Da Gama vs Fluminense</a>
-<td>December 10, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 15:30:00" data-start="December 10, 2025 16:30:00"></span></td>
+<td>December 11, 2025 15:00 PM</td>
+<td><span class="countdown-timer" data-end="December 12, 2025 14:00:00" data-start="December 11, 2025 15:00:00"></span></td>
 </td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-14">Tigres UANL vs Toluca</a>
-<td>December 10, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="December 11, 2025 15:30:00" data-start="December 10, 2025 16:30:00"></span></td>
+<td>December 10, 2025 18:00 PM</td>
+<td><span class="countdown-timer" data-end="December 11, 2025 17:00:00" data-start="December 10, 2025 18:00:00"></span></td>
 </td>
 <tr>
-</tbody></table></div>
+</tr></tr></tr></tr></tr></tr></tr></tr></tr></tr></tr></tr></tr></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
