--- a/soccer.html
+++ b/soccer.html
@@ -97,25 +97,21 @@
 <tbody>
 
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Dinamo Zagreb vs Real Betis</a>
-<td>December 11, 2025 09:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Union Berlin vs Leipzig</a>
+<td>December 12, 2025 11:30 AM</td>
 <td><span class="countdown-timer" data-end="December 12, 2025 08:45:00" data-start="December 11, 2025 09:45:00"></span></td>
-</td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Ferencváros vs Rangers</a>
-<td>December 11, 2025 09:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Angers vs Nantes</a>
+<td>December 12, 2025 11:45 AM</td>
 <td><span class="countdown-timer" data-end="December 12, 2025 08:45:00" data-start="December 11, 2025 09:45:00"></span></td>
-</td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Utrecht vs Nottingham Forest</a>
-<td>December 11, 2025 09:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Lecce vs Pisa</a>
+<td>December 12, 2025 11:45 AM</td>
 <td><span class="countdown-timer" data-end="December 12, 2025 08:45:00" data-start="December 11, 2025 09:45:00"></span></td>
-</td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Young Boys vs Lille</a>
-<td>December 11, 2025 09:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Real Sociedad vs Girona</a>
+<td>December 12, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 12, 2025 08:45:00" data-start="December 11, 2025 09:45:00"></span></td>
-</td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-6">Aberdeen vs Strasbourg</a>
 <td>December 11, 2025 12:00 PM</td>
