--- a/fighting.html
+++ b/fighting.html
@@ -98,9 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/aew">AEW</a></td>
-<td>December 10, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 10, 2025 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
+<td>December 12, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 12, 2025 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
