--- a/nba.html
+++ b/nba.html
@@ -198,6 +198,124 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 12, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Chicago Bulls vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        December 12, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 13, 2025 4:00 PM:00" data-start="December 12, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Atlanta Hawks vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        December 12, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 13, 2025 4:00 PM:00" data-start="December 12, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Indiana Pacers vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        December 12, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 13, 2025 4:00 PM:00" data-start="December 12, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Cleveland Cavaliers vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        December 12, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 13, 2025 4:00 PM:00" data-start="December 12, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Utah Jazz vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        December 12, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 13, 2025 5:00 PM:00" data-start="December 12, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Brooklyn Nets vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        December 12, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 13, 2025 5:30 PM:00" data-start="December 12, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Minnesota Timberwolves vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        December 12, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 13, 2025 7:00 PM:00" data-start="December 12, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
