--- a/nhl.html
+++ b/nhl.html
@@ -159,6 +159,19 @@
             <td><a href="https://roxiestreams.live/nhl-streams-13">Buffalo Sabres vs Vancouver Canucks</a></td>
             <td>December 11, 2025 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-12 19:00:00" data-start="2025-12-11 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Friday, December 12, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Chicago Blackhawks vs St. Louis Blues</a></td>
+            <td>December 12, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-13 17:00:00" data-start="2025-12-12 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Seattle Kraken vs Utah Mammoth</a></td>
+            <td>December 12, 2025 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-13 18:00:00" data-start="2025-12-12 18:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
