--- a/soccer.html
+++ b/soccer.html
@@ -96,23 +96,75 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Union Berlin vs Leipzig</a>
-<td>December 12, 2025 11:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Wimbledon vs Mansfield Town</a>
+<td>December 13, 2025 04:30 AM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 10:45:00" data-start="December 12, 2025 11:45:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Stoke City vs Swansea City</a>
+<td>December 13, 2025 04:30 AM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 10:45:00" data-start="December 12, 2025 11:45:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Atletico Madrid vs Valencia</a>
+<td>December 13, 2025 05:00 AM</td>
 <td><span class="countdown-timer" data-end="December 13, 2025 10:30:00" data-start="December 12, 2025 11:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Angers vs Nantes</a>
-<td>December 12, 2025 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Eintracht Frankfurt vs Augsburg</a>
+<td>December 13, 2025 06:30 AM</td>
 <td><span class="countdown-timer" data-end="December 13, 2025 10:45:00" data-start="December 12, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Lecce vs Pisa</a>
-<td>December 12, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="December 13, 2025 10:45:00" data-start="December 12, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Real Sociedad vs Girona</a>
-<td>December 12, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Chelsea vs Everton</a>
+<td>December 13, 2025 07:00 AM</td>
 <td><span class="countdown-timer" data-end="December 13, 2025 11:00:00" data-start="December 12, 2025 12:00:00"></span></td>
 <tr>
-</tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Liverpool vs Brighton</a>
+<td>December 13, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 11:00:00" data-start="December 12, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Coventry City vs Bristol City</a>
+<td>December 13, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 11:00:00" data-start="December 12, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Mallorca vs Elche</a>
+<td>December 13, 2025 07:15 AM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 10:30:00" data-start="December 12, 2025 11:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Flamengo vs Pyramids FC</a>
+<td>December 13, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 10:30:00" data-start="December 12, 2025 11:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Antalyaspor vs Galatasaray</a>
+<td>December 13, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 10:30:00" data-start="December 12, 2025 11:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Burnley vs Fulham</a>
+<td>December 13, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 10:30:00" data-start="December 12, 2025 11:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Barcelona vs Osasuna</a>
+<td>December 13, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 10:30:00" data-start="December 12, 2025 11:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Bayer Leverkusen vs Köln</a>
+<td>December 13, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 10:30:00" data-start="December 12, 2025 11:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Metz vs PSG</a>
+<td>December 13, 2025 10:00 AM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 10:30:00" data-start="December 12, 2025 11:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Getafe vs Espanyol</a>
+<td>December 13, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 10:30:00" data-start="December 12, 2025 11:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Arsenal vs Wolves</a>
+<td>December 13, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 10:30:00" data-start="December 12, 2025 11:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Paris vs Toulouse</a>
+<td>December 13, 2025 12:05 PM</td>
+<td><span class="countdown-timer" data-end="December 13, 2025 10:30:00" data-start="December 12, 2025 11:30:00"></span></td>
+<tr>
+</tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
