--- a/nfl.html
+++ b/nfl.html
@@ -123,7 +123,7 @@
   <div class="container container-fluid pt-2 text-white">
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NFL Events
+     Upcoming NCAA Events
     </h2>
     <table id="eventsTable">
      <thead>
@@ -142,15 +142,15 @@
      <tbody>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nfl-streams-1">
-         Atalanta Falcons vs Tamapa Bay Buccaneers
+        <a href="https://roxiestreams.live/ncaa-streams-1">
+         Army vs Navy
         </a>
        </td>
        <td>
-        December 11, 2025 5:15 PM
+        December 13, 2025 12:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 12, 2025 5:15 PM:00" data-start="December 11, 2025 5:15 PM:00">
+        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 5:15 PM:00">
         </span>
        </td>
       </tr>
