--- a/nfl.html
+++ b/nfl.html
@@ -154,6 +154,20 @@
         </span>
        </td>
       </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/ncaa-streams-2">
+         Prairie View A&M vs South Carolina State
+        </a>
+       </td>
+       <td>
+        December 13, 2025 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 5:15 PM:00">
+        </span>
+       </td>
+      </tr>
      </tbody>
     </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
