--- a/nfl.html
+++ b/nfl.html
@@ -158,7 +158,7 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/ncaa-streams-2">
-         Army vs Navy
+         Villanova v Tarleton State
         </a>
        </td>
        <td>
