--- a/nfl.html
+++ b/nfl.html
@@ -143,7 +143,7 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/ncaa-streams-1">
-         Prairie View A&M vs South Carolina State
+         Prairie View A&amp;M vs South Carolina State
         </a>
        </td>
        <td>
@@ -155,20 +155,20 @@
        </td>
       </tr>
       <tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/ncaa-streams-2">
-         Villanova v Tarleton State
-        </a>
-       </td>
-       <td>
-        December 13, 2025 09:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 9:00 AM:00">
-        </span>
-       </td>
-      </tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/ncaa-streams-2">
+          Villanova v Tarleton State
+         </a>
+        </td>
+        <td>
+         December 13, 2025 09:00 AM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 9:00 AM:00">
+         </span>
+        </td>
+       </tr>
        <td>
         <a href="https://roxiestreams.live/ncaa-streams-3">
          Army vs Navy
@@ -207,6 +207,222 @@
        </td>
        <td>
         <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <h2>
+     NFL Schedule for Sunday, December 14, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-1">
+         Cleveland Browns vs Chicago Bears
+        </a>
+       </td>
+       <td>
+        December 14, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-2">
+         Baltimore Ravens vs Cincinnati Bengals
+        </a>
+       </td>
+       <td>
+        December 14, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-3">
+         Los Angeles Rams vs Kansas City Chiefs
+        </a>
+       </td>
+       <td>
+        December 14, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-4">
+         Buffalo Bills vs New England Patriots
+        </a>
+       </td>
+       <td>
+        December 14, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-5">
+         Washington Commanders vs New York
+        </a>
+       </td>
+       <td>
+        December 14, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-6">
+         Las Vegas Raiders vs Philadelphia Eagles
+        </a>
+       </td>
+       <td>
+        December 14, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-7">
+         New York vs Jacksonville Jaguars
+        </a>
+       </td>
+       <td>
+        December 14, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-8">
+         Arizona Cardinals vs Houston Texans
+        </a>
+       </td>
+       <td>
+        December 14, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-9">
+         Green Bay Packers vs Denver Broncos
+        </a>
+       </td>
+       <td>
+        December 14, 2025 1:25 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-10">
+         Detroit Lions vs Los Angeles Rams
+        </a>
+       </td>
+       <td>
+        December 14, 2025 1:25 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-11">
+         Carolina Panthers vs New Orleans Saints
+        </a>
+       </td>
+       <td>
+        December 14, 2025 1:25 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-12">
+         Tennessee Titans vs San Francisco 49ers
+        </a>
+       </td>
+       <td>
+        December 14, 2025 1:25 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-13">
+         Indianapolis Colts vs Seattle Seahawks
+        </a>
+       </td>
+       <td>
+        December 14, 2025 1:25 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-14">
+         Minnesota Vikings vs Dallas Cowboys
+        </a>
+       </td>
+       <td>
+        December 14, 2025 5:20 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 5:20 PM:00" data-start="December 14, 2025 5:20 PM:00">
         </span>
        </td>
       </tr>
