--- a/nhl.html
+++ b/nhl.html
@@ -159,6 +159,39 @@
             <td><a href="https://roxiestreams.live/nhl-streams-13">Calgary Flames vs Los Angeles Kings</a></td>
             <td>December 13, 2025 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-14 19:00:00" data-start="2025-12-13 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Sunday, December 14, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Vancouver Canucks vs New Jersey Devils</a></td>
+            <td>December 14, 2025 09:30 AM</td>
+            <td><span class="countdown-timer" data-end="2025-12-15 09:30:00" data-start="2025-12-14 09:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Utah Mammoth vs Pittsburgh Penguins</a></td>
+            <td>December 14, 2025 12:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-15 12:00:00" data-start="2025-12-14 12:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Philadelphia Flyers vs Carolina Hurricanes</a></td>
+            <td>December 14, 2025 02:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-15 14:00:00" data-start="2025-12-14 14:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Boston Bruins vs Minnesota Wild</a></td>
+            <td>December 14, 2025 03:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-15 15:00:00" data-start="2025-12-14 15:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Edmonton Oilers vs Montreal Canadiens</a></td>
+            <td>December 14, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-15 16:00:00" data-start="2025-12-14 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Buffalo Sabres vs Seattle Kraken</a></td>
+            <td>December 14, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-15 17:00:00" data-start="2025-12-14 17:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
