--- a/nba.html
+++ b/nba.html
@@ -170,6 +170,136 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 14, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+         Washington Wizards vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        December 14, 2025 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 12:00 PM:00" data-start="December 14, 2025 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Charlotte Hornets vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        December 14, 2025 12:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 12:30 PM:00" data-start="December 14, 2025 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Philadelphia 76ers vs Atlanta Hawks
+        </a>
+       </td>
+       <td>
+        December 14, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 3:00 PM:00" data-start="December 14, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Milwaukee Bucks vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        December 14, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 3:00 PM:00" data-start="December 14, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Sacramento Kings vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        December 14, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 4:00 PM:00" data-start="December 14, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         New Orleans Pelicans vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        December 14, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 4:00 PM:00" data-start="December 14, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Los Angeles Lakers vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        December 14, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 5:00 PM:00" data-start="December 14, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Golden State Warriors vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        December 14, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 15, 2025 6:00 PM:00" data-start="December 14, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
