--- a/nfl.html
+++ b/nfl.html
@@ -123,97 +123,7 @@
   <div class="container container-fluid pt-2 text-white">
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NCAA Events
-    </h2>
-    <table id="eventsTable">
-     <thead>
-      <tr>
-       <th>
-        Event
-       </th>
-       <th>
-        Start Time
-       </th>
-       <th>
-        Countdown
-       </th>
-      </tr>
-     </thead>
-     <tbody>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/ncaa-streams-1">
-         Prairie View A&amp;M vs South Carolina State
-        </a>
-       </td>
-       <td>
-        December 13, 2025 09:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 9:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <tr>
-        <td>
-         <a href="https://roxiestreams.live/ncaa-streams-2">
-          Villanova v Tarleton State
-         </a>
-        </td>
-        <td>
-         December 13, 2025 09:00 AM
-        </td>
-        <td>
-         <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 9:00 AM:00">
-         </span>
-        </td>
-       </tr>
-       <td>
-        <a href="https://roxiestreams.live/ncaa-streams-3">
-         Army vs Navy
-        </a>
-       </td>
-       <td>
-        December 13, 2025 12:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 12:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/ncaa-streams-1">
-         South Dakota v Montana
-        </a>
-       </td>
-       <td>
-        December 13, 2025 12:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 12:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/ncaa-streams-1">
-         Boise State v Washington
-        </a>
-       </td>
-       <td>
-        December 13, 2025 17:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 14, 2025 5:15 PM:00" data-start="December 13, 2025 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-     </tbody>
-    </table>
-    <h2>
-     NFL Schedule for Sunday, December 14, 2025
+     Upcoming NFL Events
     </h2>
     <table id="eventsTable">
      <thead>
