--- a/fighting.html
+++ b/fighting.html
@@ -98,25 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ppv-streams-3">East vs West 21</a></td>
-<td>December 13, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 13, 2025 09:30:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.live/ppv-streams-1">JACK vs MIKAELIAN</a></td>
-<td>December 13, 2025 16:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 13, 2025 16:00:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.live/ufc">UFC Fight Night: Royval vs Kape</a></td>
-<td>December 13, 2025 16:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 13, 2025 16:00:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.live/ppv-streams-2">Redneck Brawl 11</a></td>
-<td>December 13, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 13, 2025 17:00:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Saturday Night Main Event</a></td>
-<td>December 13, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 13, 2025 16:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
+<td>December 14, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 14, 2025 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
