--- a/soccer.html
+++ b/soccer.html
@@ -136,8 +136,8 @@
 <td>December 14, 2025 07:30 AM</td>
 <td><span class="countdown-timer" data-end="December 15, 2025 06:30:00" data-start="December 14, 2025 07:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Auxerre vs lille</a>
-<td>December 14, 2025 09:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Auxerre vs Lille</a>
+<td>December 14, 2025 08:15 AM</td>
 <td><span class="countdown-timer" data-end="December 15, 2025 08:30:00" data-start="December 14, 2025 09:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Lens vs Nice</a>
