--- a/nfl.html
+++ b/nfl.html
@@ -152,10 +152,9 @@
        <td>
         <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
         </span>
+        </span>
        </td>
       </tr>
-      <tr>
-       <td>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nfl-streams-1">
