--- a/MLBSCRIPT/nfl_with_streams.html
+++ b/MLBSCRIPT/nfl_with_streams.html
@@ -98,6 +98,11 @@
        </a>
 </li>
 <li class="nav-item">
+<a class="nav-link" href="https://roxiestreams.live/nhl">
+        NHL
+       </a>
+</li>
+<li class="nav-item">
 <a class="nav-link" href="https://roxiestreams.live/fighting">
         Fighting
        </a>
@@ -119,223 +124,253 @@
 <div class="container container-fluid pt-2 text-white">
 <div class="mt-5">
 <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NCAA Events
+     Upcoming NFL Events
     </h2>
 <table id="eventsTable">
 <thead>
 <tr>
 <th>
-       Event
-      </th>
+        Event
+       </th>
 <th>
-       Start Time
-      </th>
+        Start Time
+       </th>
 <th>
-       Countdown
-      </th>
+        Countdown
+       </th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>
 <a href="https://roxiestreams.live/redzone">
-        NFL RedZone
-       </a>
+         NFL RedZone
+        </a>
 </td>
 <td>
-       December 07, 2025 10:00 AM
-      </td>
+        December 14, 2025 10:00 AM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122598">
-        Seattle Seahawks vs Atlanta Falcons
-       </a>
+<tr>
+<td>
+<a href="https://roxiestreams.live/nfl-streams-1">
+         Cleveland Browns vs Chicago Bears
+        </a>
 </td>
 <td>
-       December 07, 2025 10:00 AM
-      </td>
+        December 14, 2025 10:00 AM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122596">
-        Cincinnati Bengals vs Buffalo Bills
-       </a>
+<a href="https://roxiestreams.live/nfl-streams-2">
+         Baltimore Ravens vs Cincinnati Bengals
+        </a>
 </td>
 <td>
-       December 07, 2025 10:00 AM
-      </td>
+        December 14, 2025 10:00 AM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122595">
-        Tennessee Titans vs Cleveland Browns
-       </a>
+<a href="https://roxiestreams.live/nfl-streams-3">
+         Los Angeles Rams vs Kansas City Chiefs
+        </a>
 </td>
 <td>
-       December 07, 2025 10:00 AM
-      </td>
+        December 14, 2025 10:00 AM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122593">
-        Washington Commanders vs Minnesota Vikings
-       </a>
+<a href="https://roxiestreams.live/nfl-streams-4">
+         Buffalo Bills vs New England Patriots
+        </a>
 </td>
 <td>
-       December 07, 2025 10:00 AM
-      </td>
+        December 14, 2025 10:00 AM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122592">
-        Miami Dolphins vs New York
-       </a>
+<a href="https://roxiestreams.live/nfl-streams-5">
+         Washington Commanders vs New York
+        </a>
 </td>
 <td>
-       December 07, 2025 10:00 AM
-      </td>
+        December 14, 2025 10:00 AM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122591">
-        New Orleans Saints vs Tampa Bay Buccaneers
-       </a>
+<a href="https://roxiestreams.live/nfl-streams-6">
+         Las Vegas Raiders vs Philadelphia Eagles
+        </a>
 </td>
 <td>
-       December 07, 2025 10:00 AM
-      </td>
+        December 14, 2025 10:00 AM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122594">
-        Indianapolis Colts vs Jacksonville Jaguars
-       </a>
+<a href="https://roxiestreams.live/nfl-streams-7">
+         New York vs Jacksonville Jaguars
+        </a>
 </td>
 <td>
-       December 07, 2025 10:00 AM
-      </td>
+        December 14, 2025 10:00 AM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122597">
-        Pittsburgh Steelers vs Baltimore Ravens
-       </a>
+<a href="https://roxiestreams.live/nfl-streams-8">
+         Arizona Cardinals vs Houston Texans
+        </a>
 </td>
 <td>
-       December 07, 2025 10:00 AM
-      </td>
+        December 14, 2025 10:00 AM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122590">
-        Denver Broncos vs Las Vegas Raiders
-       </a>
+<a href="https://roxiestreams.live/nfl-streams-9">
+         Green Bay Packers vs Denver Broncos
+        </a>
 </td>
 <td>
-       December 07, 2025 1:05 PM
-      </td>
+        December 14, 2025 1:25 PM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 1:05 PM:00" data-start="December 07, 2025 1:05 PM:00">
+<span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122588">
-        Chicago Bears vs Green Bay Packers
-       </a>
+<a href="https://roxiestreams.live/nfl-streams-10">
+         Detroit Lions vs Los Angeles Rams
+        </a>
 </td>
 <td>
-       December 07, 2025 1:25 PM
-      </td>
+        December 14, 2025 1:25 PM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 1:25 PM:00" data-start="December 07, 2025 1:25 PM:00">
+<span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122589">
-        Los Angeles Rams vs Arizona Cardinals
-       </a>
+<a href="https://roxiestreams.live/nfl-streams-11">
+         Carolina Panthers vs New Orleans Saints
+        </a>
 </td>
 <td>
-       December 07, 2025 1:25 PM
-      </td>
+        December 14, 2025 1:25 PM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 1:25 PM:00" data-start="December 07, 2025 1:25 PM:00">
+<span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122587">
-        Houston Texans vs Kansas City Chiefs
-       </a>
+<a href="https://roxiestreams.live/nfl-streams-12">
+         Tennessee Titans vs San Francisco 49ers
+        </a>
 </td>
 <td>
-       December 07, 2025 5:20 PM
-      </td>
+        December 14, 2025 1:25 PM
+       </td>
 <td>
-<span class="countdown-timer" data-end="December 08, 2025 5:20 PM:00" data-start="December 07, 2025 5:20 PM:00">
+<span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
 </span>
 </td>
 </tr>
-</tbody>
+<tr>
+<td>
+<a href="https://roxiestreams.live/nfl-streams-13">
+         Indianapolis Colts vs Seattle Seahawks
+        </a>
+</td>
+<td>
+        December 14, 2025 1:25 PM
+       </td>
+<td>
+<span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
+</span>
+</td>
+</tr>
+<tr>
+<td>
+<a href="https://roxiestreams.live/nfl-streams-14">
+         Minnesota Vikings vs Dallas Cowboys
+        </a>
+</td>
+<td>
+        December 14, 2025 5:20 PM
+       </td>
+<td>
+<span class="countdown-timer" data-end="December 15, 2025 5:20 PM:00" data-start="December 14, 2025 5:20 PM:00">
+</span>
+</td>
+</tr>
+</td></tr></tbody>
 </table>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item">
 <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-       Stream Request (Discord)
-      </a>
+        Stream Request (Discord)
+       </a>
 </li>
 </ul>
 <p class="mb-0 text-body-secondary text-center text-lg-start">
-     Roxiestreams © 2024
-    </p>
+      Roxiestreams © 2024
+     </p>
 </footer>
 <script src="js/bootstrap.bundle.min.js">
 </script>
 <script>
-    function startCountdown() {
+     function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -364,7 +399,8 @@
         }
 
         window.onload = startCountdown;
-   </script>
+    </script>
 </div>
-</div></body>
+</div>
+</body>
 </html>
