--- a/nfl.html
+++ b/nfl.html
@@ -185,7 +185,7 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nfl-streams-3">
-         Los Angeles Rams vs Kansas City Chiefs
+         Los Angeles Chargers vs Kansas City Chiefs
         </a>
        </td>
        <td>
@@ -213,7 +213,7 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nfl-streams-5">
-         Washington Commanders vs New York
+         Washington Commanders vs New York Giants
         </a>
        </td>
        <td>
@@ -241,7 +241,7 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nfl-streams-7">
-         New York vs Jacksonville Jaguars
+         New York Jets vs Jacksonville Jaguars
         </a>
        </td>
        <td>
